code cleanup
several simple port related fixes and usage of new methods